--- a/style.css
+++ b/style.css
@@ -215,8 +215,8 @@ input[type="file"] {
 }
 
 .viewer-frame iframe {
-  width: 100%;
-  min-height: 320px;
+  width: calc(100% / var(--viewer-scale, 1));
+  min-height: calc(320px / var(--viewer-scale, 1));
   border: none;
   background: transparent;
   transform-origin: top left;
@@ -258,6 +258,6 @@ input[type="file"] {
   }
 
   .viewer-frame iframe {
-    min-height: 480px;
+    min-height: calc(480px / var(--viewer-scale, 1));
   }
 }
